# ce

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  VISION.md  build.rs  install.sh
.github/workflows/: ci.yml
Formula/: ce.rb
crates/ce-appmgr/: Cargo.toml  README.md
crates/ce-appmgr/manifests/: postgres.ceapp.toml  rdev.ceapp.toml
crates/ce-appmgr/src/: ctlapi.rs  desired.rs  instances.rs  lib.rs  manifest.rs  materialize.rs  placement.rs  platform.rs  registry.rs  resolver.rs  run.rs  store.rs  supervisor.rs
crates/ce-cap/: Cargo.toml
crates/ce-cap/examples/: gen_vectors.rs
crates/ce-cap/src/: lib.rs
crates/ce-cap/tests/: prop_attenuation.rs
crates/ce-chain/: Cargo.toml
crates/ce-chain/benches/: chain.rs
crates/ce-chain/src/: bond_gate.rs  capacity_audit.rs  held_escrow.rs  lib.rs  lineage.rs  verification.rs
crates/ce-chain/tests/: prop_chain.rs
crates/ce-container/: Cargo.toml
crates/ce-container/src/: lib.rs
crates/ce-deploy/: Cargo.toml  container-onboarding-e2e.sh  realrelay-topology-e2e.sh  relay-topology-e2e.sh  run-onboarding-e2e.sh  scale-reliability-e2e.sh
crates/ce-deploy/src/: cluster.rs  hetzner.rs  lib.rs  ssh.rs
crates/ce-deploy/tests/: e2e.rs  live_mesh.rs  onboarding_e2e.rs
crates/ce-guard/: Cargo.toml
crates/ce-guard/src/: lib.rs
crates/ce-identity/: Cargo.toml
crates/ce-identity/benches/: identity.rs
crates/ce-identity/src/: lib.rs  vrf.rs
crates/ce-identity/tests/: prop_identity.rs
crates/ce-meritrank/: Cargo.toml
crates/ce-meritrank/src/: lib.rs
crates/ce-mesh/: Cargo.toml
crates/ce-mesh/src/: lib.rs  net_hardening.rs  placement_beacon.rs  vivaldi.rs
crates/ce-node/: Cargo.toml
crates/ce-node/src/: api.rs  auth.rs  capability.rs  chain_actor.rs  devices.rs  grants.rs  lib.rs
crates/ce-node/tests/: adversarial.rs  chain_actor.rs  local_cluster.rs  sync_exec.rs
crates/ce-protocol/: Cargo.toml
crates/ce-protocol/benches/: protocol.rs
crates/ce-protocol/src/: lib.rs
crates/ce-protocol/tests/: prop_signal.rs
crates/ce-runtime/src/: lib.rs
crates/ce-tls/src/: lib.rs
crates/ce-wasm/: Cargo.toml
crates/ce-wasm/src/: host_abi.rs  lib.rs
docs/: api.md  app-messaging.md  consensus.md  data-layer.md  deployment.md  design.md  frontier.md  optimization-roadmap.md  payment-channels.md  primitives.md  protocol.md  roadmap.md  runtime.md  standards.md  sybil-resistance.md  testing.md  threat-model.md
docs/apps/: scheduler.md
packaging/aur/: PKGBUILD
packaging/choco/: ce.nuspec
packaging/choco/tools/: chocolateyInstall.ps1
packaging/scripts/: update-sha256.sh
src/: keybackup.rs  main.rs
tests/: broken_pipe.rs
tools/: README.md  ce-build  cebuild
