[package]
name = "ce-appmgr"
version = "0.1.0"
edition = "2024"
description = "CE universal app & system manager — install/resolve/sandbox/supervise any app (CE-native, legacy, or whole systems) through the single `ce` binary."
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = { version = "1", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
directories = "5"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
