[package]
name = "ce-container"
version = "0.1.0"
edition = "2024"

[dependencies]
ce-chain = { path = "../ce-chain" }
ce-identity = { path = "../ce-identity" }
bollard = "0.17"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
hex = "0.4"
