[package]
name = "ce-identity"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
# Sybil-security P9 (design 2(b), consensus.md:557): `vrf.rs` exposes a clean `Vrf` trait over the
# currently-wired signature-as-VRF (`SHA256(Ed25519-sig)`) AND an RFC-9381-class ECVRF behind the
# optional `ecvrf` feature, backed by the VETTED `schnorrkel` crate (sr25519 VRF as shipped in
# Polkadot/Substrate) — nothing hand-rolled. The feature is OFF by default because adopting ECVRF
# on-chain widens `Block.vrf_proof` (a consensus-format migration the integrator owns); until then a
# clearly `#[doc(hidden)]`-marked, consensus-INSECURE placeholder keeps the trait surface compiling.
# TODO(P9): make `ecvrf` default once `Block.vrf_proof` widening + NodeId->sr25519-key registration land.
schnorrkel = { version = "0.11", optional = true }
merlin = { version = "3", optional = true }

[features]
default = []
ecvrf = ["dep:schnorrkel", "dep:merlin"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "identity"
harness = false
