[package]
name = "ce-mesh"
version = "0.1.0"
edition = "2024"

[dependencies]
ce-identity = { path = "../ce-identity" }
ce-chain = { path = "../ce-chain" }
ce-protocol = { path = "../ce-protocol" }
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "identify", "tokio", "macros", "mdns", "quic", "relay", "autonat", "dcutr", "request-response", "ping"] }
libp2p-stream = "=0.1.0-alpha"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
sha2 = "0.10"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
futures = "0.3"
# Sybil-security P7 (placement_beacon): a VETTED Wesolowski/Pietrzak VDF crate (POA Network's pure-
# Rust class-group VDF — no GMP/C deps; verified to build clean on the relay). It is wired behind the
# OPTIONAL `real-vdf` feature so the default build stays warning-free (the crate is unmaintained and
# pulls an old `sha2 0.8`, which would otherwise add a future-incompat warning to the shared consensus
# repo). The `Vdf` trait in placement_beacon.rs is the stable interface; `RealVdf` (feature-gated)
# adapts this crate, `PlaceholderVdf` (default) is the clearly-marked consensus-INSECURE stand-in.
# Production swap = build with `--features real-vdf` and select `RealVdf`. NEVER a hand-rolled VDF.
vdf = { version = "0.1", optional = true }

[features]
# Enable the vetted Wesolowski VDF (`RealVdf`) for the producer-unbiasable placement beacon (P7).
# Off by default to keep the default consensus build clean; the integrator/operator turns it on for
# any network that routes audit-seed value above the trivial threshold (design 2(b), MANDATORY VDF).
real-vdf = ["dep:vdf"]
