[package]
name = "ce-node"
version = "0.1.0"
edition = "2024"

[dependencies]
ce-identity = { path = "../ce-identity" }
ce-chain = { path = "../ce-chain" }
ce-mesh = { path = "../ce-mesh" }
ce-container = { path = "../ce-container" }
ce-protocol = { path = "../ce-protocol" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
serde_json = "1"
bincode = "1"
directories = "5"
axum = "0.7"
bollard = "0.17"
futures = "0.3"
hex = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
ce-mesh = { path = "../ce-mesh" }
ce-identity = { path = "../ce-identity" }
ce-protocol = { path = "../ce-protocol" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
